<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_tittle" />
        <item
            android:id="@+id/nav_home_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/order_tittle" />
        <item
            android:id="@+id/nav_home_priceList"
            android:icon="@drawable/ic_menu_price"
            android:title="@string/price_list_title" />
        <item
            android:id="@+id/nav_home_discount"
            android:icon="@drawable/ic_menu_discount"
            android:title="@string/discount_tittle" />
        <item
            android:id="@+id/nav_home_terms"
            android:icon="@drawable/ic_menu_conditions"
            android:title="@string/terms_tittle" />
        <item
            android:id="@+id/nav_home_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contact_tittle" />
        <item
            android:id="@+id/nav_home_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_tittle" />
        <item
            android:id="@+id/nav_home_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/setting_tittle" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/log_out_tittle" />

    </group>
</menu>