<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout

      android:id="@+id/cl_login_root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".ui.main.view.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_main_begin" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pi_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="sdsdsdsdsdsd"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:visibility="visible"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        style="@style/editText_main_check"
        android:hint="@string/login_email"
        app:boxStrokeWidthFocused="4dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_login_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress|textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        style="@style/editText_main_check"
        android:hint="@string/login_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/til_login_email">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_main_margin"
        android:text="@string/login_forgotPassword"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/til_login_password" />

    <Button
        android:id="@+id/btn_login_login"
        style="@style/buttonSmall_main"
        android:text="@string/login_login"
        app:backgroundTint="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_signup"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button

        android:id="@+id/btn_login_signup"
        style="@style/buttonSmall_main"
        android:text="@string/login_signUp"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_skip"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_login_skip"
        style="@style/buttonSmall_main"
        android:text="@string/login_skip"
        app:backgroundTint="#CDCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_main_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_main_margin" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
